IALERT-4069: Refactor bom component vulnerability extraction to use bom vulnerabilities endpoint